<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cadastrarFragment"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".CadatrarPergunta">

    <TextView
        android:id="@+id/qualPergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/qualPergunta" />

    <EditText
        android:id="@+id/cad_pergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qualPergunta"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:hint="@string/cad_pergunta" />

    <TextView
        android:id="@+id/qualResposta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cad_pergunta"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_alignParentStart="true"
        android:text="@string/qualResposta" />

    <EditText
        android:id="@+id/cad_resposta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/qualResposta"
        android:hint="@string/cad_resposta" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/cadastrar" />

        <Button
            android:id="@+id/jogar"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="0"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:drawableEnd="@android:drawable/ic_media_play"
            android:text="@string/jogar" />

    </LinearLayout>

</RelativeLayout>